# political-compass

./: .gitattributes  .gitignore  README.md  download_mc_speeches.py  eval.txt  gradio_ui.py  main.py  pyproject.toml  user_input.py
articles/: Sentiment political compass  desktop.ini  resources
classifiers/: BERTExtractor_Logistic_Regression.pkl  BERTExtractor_Random_Forest_Classifier.pkl  BERTExtractor_Support_Vector_Classifier.pkl  BagOfWordsExtractor_Logistic_Regression.pkl  BagOfWordsExtractor_Random_Forest_Classifier.pkl  BagOfWordsExtractor_Support_Vector_Classifier.pkl  NgramsExtractor_Logistic_Regression.pkl  NgramsExtractor_Random_Forest_Classifier.pkl  NgramsExtractor_Support_Vector_Classifier.pkl  TfidfExtractor_Logistic_Regression.pkl  TfidfExtractor_Random_Forest_Classifier.pkl  TfidfExtractor_Support_Vector_Classifier.pkl  Word2VecExtractor_Logistic_Regression.pkl  Word2VecExtractor_Random_Forest_Classifier.pkl  Word2VecExtractor_Support_Vector_Classifier.pkl  base.py  logistic_regression.py  random.py
feature_extraction/: base.py  bert.py  bow.py  ngrams.py  tfidf.py  word2vec.py
regressors/: BERTExtractor_Linear_Regression_(x).pkl  BERTExtractor_Linear_Regression_(y).pkl  BERTExtractor_Random_Forest_Regressor_(x).pkl  BERTExtractor_Random_Forest_Regressor_(y).pkl  BERTExtractor_Support_Vector_Regressor_(x).pkl  BERTExtractor_Support_Vector_Regressor_(y).pkl  BagOfWordsExtractor_Linear_Regression_(x).pkl  BagOfWordsExtractor_Linear_Regression_(y).pkl  BagOfWordsExtractor_Random_Forest_Regressor_(x).pkl  NgramsExtractor_Linear_Regression_(x).pkl  (+20 more)
(+14 files in other folders)
