[tool.poetry]
name = "political-compass"
version = "0.1.0"
description = ""
authors = [
    "Maximilian Pfeil <maximilian.j.pfeil@gmail.com>",
    "Alma Linder"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.9.1"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"
gradio = "4.44.1"
gensim = "^4.3.3"
spacy = "3.7.5"
transformers = "^4.46.1"
torch = "^2.5.1"
shap = "^0.46.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"